--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <script src="scripts/module/jquery-1.10.2.min.js"></script>
-    <script src="scripts/module/index.js"></script>
+    <script src="scripts/common/common.js"></script>
+    <script src="scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
 <body>
@@ -19,7 +20,7 @@
                         <a href="" >
                             <img src="images/common/logo.png" alt="로고">
                         </a>
-                    </h1>
+                </h1>
                 <div class="gnb_area">
                     <div class="util">
                         <ul>
@@ -74,34 +75,97 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="">소통공간</a>
+                                <a href="web/notice/notice.html">소통공간</a>
                                 <ul class="sub_menu">
+                                    <li><a href="web/notice/notice.html">공지사항</a></li>
+                                    <li><a href="web/notice/faq.html">자주묻는질문</a></li>
                                     <li><a href="">청소년게임제공업</a></li>
                                 </ul>
                             </li>
                         </ul>
-                        <ul class="mobile_btn">
-                            <li class="login"><a href=""><img src="images/common/icon_login.png" alt=""></a></li>
-                            <li class="all_btn"><img src="images/common/icon_nav_all.svg" alt=""></li>
-                        </ul>
+                        <a href="#" class="all_btn"><img src="images/common/icon_nav_all.svg" alt=""></a>
                     </nav>
+                    <ul class="mo_btn">
+                        <li class="login"><a href=""><img src="images/common/icon_login.png" alt=""></a></li>
+                        <li class="mo_all_btn"><img src="images/common/icon_nav_all.svg" alt=""></li>
+                    </ul>
                 </div>
             </article>
             <div class="all-menu">
-                <div class="top">
-                    <h1 class="logo">
-                        <a href="">
-                            <img src="images/common/logo.png" alt="로고">
-                        </a>
-                    </h1>
+                <i class="close">
+                    <img class="pc_close" src="images/common/header_icon_close.svg" alt="전체메뉴닫기버튼">
+                </i>
+                <div class="menu_list">
+                    <div class="part">
+                        <ul>
+                            <li>
+                                <span class="tit">게임물관련사업자교육</span>
+                                <ul>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
+                                    <li><a href="">일반게임제공업</a></li>
+                                    <li><a href="">복합유통게임제공업</a></li>
+                                    <li><a href="">게임제작업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="part">
+                        <ul>
+                            <li>
+                                <span class="tit">자체등급분류사업자교육</span>
+                                <ul>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
+                                    <li><a href="">게임제작업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span class="tit">공무원맞춤교육</span>
+                                <ul>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="part">
+                        <ul>
+                            <li>
+                                <span class="tit">게임물이용자교육</span>
+                                <ul>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span class="tit">소통공간</span>
+                                <ul>
+                                    <li><a href="/web/notice/notice.html">공지사항</a></li>
+                                    <li><a href="/web/notice/faq.html" id="shareLink">자주묻는질문</a></li>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                </ul>
+                            </li>
+                        </ul>   
+                    </div>
+                </div>
+            </div>
+            <!-- mobile menu -->
+            <div class="mo_nav">
+                <div class="mo_top">
                     <ul class="mo_util">
                         <li class="mo_login"><a href="">로그인</a></li>
                         <li><a href="">회원가입</a></li>
                         <li><a href="">마이페이지</a></li>
                     </ul>
-                    <i class="close">
-                        <img class="pc_close" src="images/common/header_icon_close.svg" alt="전체메뉴닫기버튼">
-                        <img class="mo_close" src="images/common/mo_header_icon_close.svg" alt="모바일_전체메뉴닫기버튼">
+                    <i class="mo_close">
+                        <img src="images/common/mo_header_icon_close.svg" alt="모바일_전체메뉴닫기버튼">
                     </i>
                 </div>
                 <div class="favorite">
@@ -148,7 +212,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="menu_list">
+                <div class="mo_menu_list">
                     <div class="part">
                         <ul>
                             <li>
@@ -200,10 +264,12 @@
                             <li>
                                 <span class="tit">소통공간<img src="images/common/mo_allmenu_arrow.svg" alt=""></span>
                                 <ul class="mo_sub_menu">
+                                    <li><a href="/web/notice/notice.html">공지사항</a></li>
+                                    <li><a href="/web/notice/faq.html">자주묻는질문</a></li>
                                     <li><a href="">청소년게임제공업</a></li>
                                 </ul>
                             </li>
-                        </ul>   
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -337,10 +403,12 @@
                     </div>
                     <!-- 게임물관련사업 -->
                     <div class="slide_area">
-                        <h5>게임물관련 사업자 - 법정교육</h5>
-                        <a href="" class="more">
-                            <img src="images/common/icon_plus.png" alt="게임물관련 사업자 - 법정교육 더보기">
-                        </a>
+                        <h5>
+                            게임물관련 사업자 - 법정교육
+                            <a href="" class="more">
+                                <img src="images/common/icon_plus.png" alt="게임물관련 사업자 - 법정교육 더보기">
+                            </a>
+                        </h5>
                         <div class="data_none">
                             <p>현재 신청할 수 있는 강의가 없습니다.</p>
                         </div>
@@ -348,10 +416,12 @@
                     <!-- //게임물관련사업 -->
                     <!-- 지자체공무원 -->
                     <div class="slide_area">
-                        <h5>지자체 공무원 - 법정교육</h5>
-                        <a href="" class="more">
-                            <img src="images/common/icon_plus.png" alt="지자체 공무원 - 법정교육 더보기">
-                        </a>
+                        <h5>
+                            지자체 공무원 - 법정교육
+                            <a href="" class="more">
+                                <img src="images/common/icon_plus.png" alt="지자체 공무원 - 법정교육 더보기">
+                            </a>
+                        </h5>
                         <div class="swiper curri_slide">
                             <ul class="swiper-wrapper">
                                 <li class="swiper-slide">
@@ -444,10 +514,12 @@
                     <!-- //지자체공무원 -->
                     <!-- 자체등급분류 -->
                     <div class="slide_area">
-                        <h5>자체등급분류 사업자 - 직무능력향상</h5>
-                        <a href="" class="more">
-                            <img src="images/common/icon_plus.png" alt="자체등급분류 사업자 - 직무능력향상 더보기">
-                        </a>
+                        <h5>
+                            자체등급분류 사업자 - 직무능력향상
+                            <a href="" class="more">
+                                <img src="images/common/icon_plus.png" alt="자체등급분류 사업자 - 직무능력향상 더보기">
+                            </a>
+                        </h5>
                         <div class="swiper curri_slide">
                             <ul class="swiper-wrapper">
                                 <li class="swiper-slide">
@@ -540,10 +612,12 @@
                     <!-- //자체등급분류 -->
                     <!-- 게임물이용자 -->
                     <div class="slide_area">
-                        <h5>게임물 이용자 - 무료교육</h5>
-                        <a href="" class="more">
-                            <img src="images/common/icon_plus.png" alt="자체등급분류 사업자 - 직무능력향상 더보기">
-                        </a>
+                        <h5>
+                            게임물 이용자 - 무료교육
+                            <a href="" class="more">
+                                <img src="images/common/icon_plus.png" alt="자체등급분류 사업자 - 직무능력향상 더보기">
+                            </a>
+                        </h5>
                         <div class="swiper curri_slide">
                             <ul class="swiper-wrapper">
                                 <li class="swiper-slide">
