--- a/index.html
+++ b/index.html
@@ -85,11 +85,8 @@
                         </ul>
                         <a href="#" class="all_btn"><img src="images/common/icon_nav_all.svg" alt=""></a>
                     </nav>
-                    <ul class="mo_btn">
-                        <li class="login"><a href=""><img src="images/common/icon_login.png" alt=""></a></li>
-                        <li class="mo_all_btn"><img src="images/common/icon_nav_all.svg" alt=""></li>
-                    </ul>
                 </div>
+                <a href="#" class="mo_all_btn"><img src="images/common/icon_nav_all.svg" alt=""></a>
             </article>
             <div class="all-menu">
                 <i class="close">
@@ -729,7 +726,6 @@
                         <option value="" title="새창으로 이동">문화체육관광부</option>
                         <option value="" title="새창으로 이동">한국게임산업협회</option>
                     </select>
-                    
                 </div>
             </article>
         </footer>
