--- a/web/notice/notice.html
+++ b/web/notice/notice.html
@@ -7,12 +7,266 @@
     <title>...</title>
     <link rel="stylesheet" href="/css/style.css" />
     <script src="/scripts/module/jquery-1.10.2.min.js"></script>
-    <script src="/scripts/include.js"></script>
     <script defer src="/scripts/common/common.js"></script>
 </head>
 <body>
     <div id="wrap">
-        <header data-include-path="/common/header.html">
+        <header>
+            <article>
+                <h1 class="logo">
+                        <a href="/" >
+                            <img src="/images/common/logo.png" alt="로고">
+                        </a>
+                </h1>
+                <div class="gnb_area">
+                    <div class="util">
+                        <ul>
+                            <li><a href="../../web/join/login.html">
+                                <img src="/images/common/icon_login.png" alt="">
+                                로그인
+                            </a></li>
+                            <li><a href="../../web/join/join.html">
+                                <img src="/images/common/icon_join.png" alt="">
+                                회원가입
+                            </a></li>
+                            <li><a href="">
+                                <img src="/images/common/icon_language.png" alt="">
+                                ENG
+                            </a></li>
+                        </ul>
+                    </div>
+                    <nav>
+                        <ul class="gnb">
+                            <li>
+                                <a href="">게임물관련사업자교육</a>
+                                <ul class="sub_menu">
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
+                                    <li><a href="">일반게임제공업</a></li>
+                                    <li><a href="">복합유통게임제공업</a></li>
+                                    <li><a href="">게임제작업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="">자체등급분류사업자교육</a>
+                                <ul class="sub_menu">
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
+                                    <li><a href="">게임제작업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="">공무원맞춤교육</a>
+                                <ul class="sub_menu">
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="">게임물이용자교육</a>
+                                <ul class="sub_menu">
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="../../web/notice/notice.html">소통공간</a>
+                                <ul class="sub_menu">
+                                    <li><a href="../../web/notice/notice.html">공지사항</a></li>
+                                    <li><a href="../../web/notice/faq.html">자주묻는질문</a></li>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <a href="#" class="all_btn"><img src="/images/common/icon_nav_all.svg" alt=""></a>
+                    </nav>
+                </div>
+                <a href="#" class="mo_all_btn"><img src="/images/common/icon_nav_all.svg" alt=""></a>
+            </article>
+            <div class="all-menu">
+                <i class="close">
+                    <img class="pc_close" src="/images/common/header_icon_close.svg" alt="전체메뉴닫기버튼">
+                </i>
+                <div class="menu_list">
+                    <div class="part">
+                        <ul>
+                            <li>
+                                <span class="tit">게임물관련사업자교육</span>
+                                <ul>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
+                                    <li><a href="">일반게임제공업</a></li>
+                                    <li><a href="">복합유통게임제공업</a></li>
+                                    <li><a href="">게임제작업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="part">
+                        <ul>
+                            <li>
+                                <span class="tit">자체등급분류사업자교육</span>
+                                <ul>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
+                                    <li><a href="">게임제작업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span class="tit">공무원맞춤교육</span>
+                                <ul>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="part">
+                        <ul>
+                            <li>
+                                <span class="tit">게임물이용자교육</span>
+                                <ul>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span class="tit">소통공간</span>
+                                <ul>
+                                    <li><a href="/web/notice/notice.html" target="_parent">공지사항</a></li>
+                                    <li><a href="/web/notice/faq.html" id="shareLink">자주묻는질문</a></li>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                </ul>
+                            </li>
+                        </ul>   
+                    </div>
+                </div>
+            </div>
+            <!-- mobile menu -->
+            <div class="mo_nav">
+                <div class="mo_top">
+                    <ul class="mo_util">
+                        <li class="mo_login"><a href="../../web/join/login.html">로그인</a></li>
+                        <li><a href="../../web/join/join.html">회원가입</a></li>
+                        <li><a href="">마이페이지</a></li>
+                    </ul>
+                    <i class="mo_close">
+                        <img src="/images/common/mo_header_icon_close.svg" alt="모바일_전체메뉴닫기버튼">
+                    </i>
+                </div>
+                <div class="favorite">
+                    <div class="favo_tit">
+                        <h4>FAVORITE MENU</h4>
+                        <a href="">MENU PLUS <i><img src="/images/common/icon_plus.png" alt=""></i></a>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="/images/module/mo_favo_icon01.png" alt="자주사용하는메뉴아이콘">
+                                <span>청소년게임<br>제공업</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="/images/module/mo_favo_icon02.png" alt="자주사용하는메뉴아이콘">
+                                <span>인터넷컴퓨터<br>제공업</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="/images/module/mo_favo_icon03.png" alt="자주사용하는메뉴아이콘">
+                                <span>나의 학습방</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../../web/notice/faq.html">
+                                <img src="/images/module/mo_favo_icon04.png" alt="자주사용하는메뉴아이콘">
+                                <span>자주하는 질문</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="/images/common/mo_icon_pius.png" alt="자주사용하는메뉴아이콘">
+                                <span></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="/images/common/mo_icon_pius.png" alt="자주사용하는메뉴아이콘">
+                                <span></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mo_menu_list">
+                    <div class="part">
+                        <ul>
+                            <li>
+                                <span class="tit">게임물관련사업자교육<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <ul class="mo_sub_menu">
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
+                                    <li><a href="">일반게임제공업</a></li>
+                                    <li><a href="">복합유통게임제공업</a></li>
+                                    <li><a href="">게임제작업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="part">
+                        <ul>
+                            <li>
+                                <span class="tit">자체등급분류사업자교육<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <ul class="mo_sub_menu">
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
+                                    <li><a href="">게임제작업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span class="tit">공무원맞춤교육<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <ul class="mo_sub_menu">
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="part">
+                        <ul>
+                            <li>
+                                <span class="tit">게임물이용자교육<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <ul class="mo_sub_menu">
+                                    <li><a href="">청소년게임제공업</a></li>
+                                    <li><a href="">게임배급업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <span class="tit">소통공간<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <ul class="mo_sub_menu">
+                                    <li><a href="../../web/notice/notice.html">공지사항</a></li>
+                                    <li><a href="../../web/notice/faq.html">자주묻는질문</a></li>
+                                    <li><a href="">청소년게임제공업</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </header>
         <div id="container" class="sub board notice">
             <div class="location">
@@ -94,7 +348,26 @@
                 </article>
             </section>
         </div>
-        <footer data-include-path="/common/footer.html">
+        <footer>
+            <article>
+                <div class="footer_area">
+                    <ul>
+                        <li><a href="">개인정보처리방침</a></li>
+                        <li><a href="">홈페이지 저작권 정책</a></li>
+                        <li><a href="">이용약관</a></li>
+                    </ul>
+                    <address>[48058] 부산광역시 해운대구 센텀서로 39, 2층 Tel : 051-720-6800 Fax : 051-720-6889</address>
+                    <p class="copy">CopyrightⓒGame Rating And Administration Committee. All Rights Reserved.</p>
+                </div>
+                <div class="site">
+                    <label for="family_site"></label>
+                    <select title="관련 사이트 목록" id="family_site">
+                        <option value="">관련 사이트</option>
+                        <option value="" title="새창으로 이동">문화체육관광부</option>
+                        <option value="" title="새창으로 이동">한국게임산업협회</option>
+                    </select>
+                </div>
+            </article>
         </footer>
     </div>
 </body>
