--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <article>
                 <h1 class="logo">
                         <a href="/" >
-                            <img src="/images/common/logo.png" alt="로고">
+                            <img src="images/common/logo.png" alt="로고">
                         </a>
                 </h1>
                 <div class="gnb_area">
