--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <script src="scripts/module/jquery-1.10.2.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/common/common.js"></script>
     <script src="scripts/module/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
