--- a/web/notice/faq.html
+++ b/web/notice/faq.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <title>...</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="/scripts/include.js"></script>
+    <script src="/scripts/common/common.js"></script>
     <script src="/scripts/module/jquery-1.10.2.min.js"></script>
 </head>
 <body>
