--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <div class="gnb_area">
                     <div class="util">
                         <ul>
-                            <li><a href="../web/join/login.html">
+                            <li><a href="web/join/login.html">
                                 <img src="images/common/icon_login.png" alt="">
                                 로그인
                             </a></li>
-                            <li><a href="../web/join/join.html">
+                            <li><a href="web/join/join.html">
                                 <img src="images/common/icon_join.png" alt="">
                                 회원가입
                             </a></li>
@@ -76,10 +76,10 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="../web/notice/notice.html">소통공간</a>
+                                <a href="web/notice/notice.html">소통공간</a>
                                 <ul class="sub_menu">
-                                    <li><a href="../web/notice/notice.html">공지사항</a></li>
-                                    <li><a href="../web/notice/faq.html">자주묻는질문</a></li>
+                                    <li><a href="web/notice/notice.html">공지사항</a></li>
+                                    <li><a href="web/notice/faq.html">자주묻는질문</a></li>
                                     <li><a href="">청소년게임제공업</a></li>
                                 </ul>
                             </li>
@@ -145,8 +145,8 @@
                             <li>
                                 <span class="tit">소통공간</span>
                                 <ul>
-                                    <li><a href="../web/notice/notice.html" target="_parent">공지사항</a></li>
-                                    <li><a href="../web/notice/faq.html" id="shareLink">자주묻는질문</a></li>
+                                    <li><a href="web/notice/notice.html" target="_parent">공지사항</a></li>
+                                    <li><a href="web/notice/faq.html" id="shareLink">자주묻는질문</a></li>
                                     <li><a href="">청소년게임제공업</a></li>
                                 </ul>
                             </li>
@@ -158,8 +158,8 @@
             <div class="mo_nav">
                 <div class="mo_top">
                     <ul class="mo_util">
-                        <li class="mo_login"><a href="../web/join/login.html">로그인</a></li>
-                        <li><a href="../web/join/join.html">회원가입</a></li>
+                        <li class="mo_login"><a href="web/join/login.html">로그인</a></li>
+                        <li><a href="web/join/join.html">회원가입</a></li>
                         <li><a href="">마이페이지</a></li>
                     </ul>
                     <i class="mo_close">
@@ -191,7 +191,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="../web/notice/faq.html">
+                            <a href="web/notice/faq.html">
                                 <img src="images/module/mo_favo_icon04.png" alt="자주사용하는메뉴아이콘">
                                 <span>자주하는 질문</span>
                             </a>
@@ -262,8 +262,8 @@
                             <li>
                                 <span class="tit">소통공간<img src="images/common/mo_allmenu_arrow.svg" alt=""></span>
                                 <ul class="mo_sub_menu">
-                                    <li><a href="../web/notice/notice.html">공지사항</a></li>
-                                    <li><a href="../web/notice/faq.html">자주묻는질문</a></li>
+                                    <li><a href="web/notice/notice.html">공지사항</a></li>
+                                    <li><a href="web/notice/faq.html">자주묻는질문</a></li>
                                     <li><a href="">청소년게임제공업</a></li>
                                 </ul>
                             </li>
