--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <script src="scripts/module/jquery-1.10.2.min.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/common/common.js"></script>
-    <script src="scripts/module/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
 <body>
@@ -25,11 +24,11 @@
                 <div class="gnb_area">
                     <div class="util">
                         <ul>
-                            <li><a href="web/join/login.html">
+                            <li><a href="">
                                 <img src="images/common/icon_login.png" alt="">
                                 로그인
                             </a></li>
-                            <li><a href="web/join/join.html">
+                            <li><a href="">
                                 <img src="images/common/icon_join.png" alt="">
                                 회원가입
                             </a></li>
@@ -76,10 +75,10 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="web/notice/notice.html">소통공간</a>
+                                <a href="">소통공간</a>
                                 <ul class="sub_menu">
-                                    <li><a href="web/notice/notice.html">공지사항</a></li>
-                                    <li><a href="web/notice/faq.html">자주묻는질문</a></li>
+                                    <li><a href="">공지사항</a></li>
+                                    <li><a href="">자주묻는질문</a></li>
                                     <li><a href="">청소년게임제공업</a></li>
                                 </ul>
                             </li>
@@ -145,8 +144,8 @@
                             <li>
                                 <span class="tit">소통공간</span>
                                 <ul>
-                                    <li><a href="web/notice/notice.html" target="_parent">공지사항</a></li>
-                                    <li><a href="web/notice/faq.html" id="shareLink">자주묻는질문</a></li>
+                                    <li><a href="" target="_parent">공지사항</a></li>
+                                    <li><a href="" id="shareLink">자주묻는질문</a></li>
                                     <li><a href="">청소년게임제공업</a></li>
                                 </ul>
                             </li>
@@ -158,8 +157,8 @@
             <div class="mo_nav">
                 <div class="mo_top">
                     <ul class="mo_util">
-                        <li class="mo_login"><a href="web/join/login.html">로그인</a></li>
-                        <li><a href="web/join/join.html">회원가입</a></li>
+                        <li class="mo_login"><a href="">로그인</a></li>
+                        <li><a href="">회원가입</a></li>
                         <li><a href="">마이페이지</a></li>
                     </ul>
                     <i class="mo_close">
@@ -262,8 +261,8 @@
                             <li>
                                 <span class="tit">소통공간<img src="images/common/mo_allmenu_arrow.svg" alt=""></span>
                                 <ul class="mo_sub_menu">
-                                    <li><a href="web/notice/notice.html">공지사항</a></li>
-                                    <li><a href="web/notice/faq.html">자주묻는질문</a></li>
+                                    <li><a href="">공지사항</a></li>
+                                    <li><a href="">자주묻는질문</a></li>
                                     <li><a href="">청소년게임제공업</a></li>
                                 </ul>
                             </li>
